--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <img src="static/img/profileIcon4536.webp" alt="" class="img-icon">
+                      <img src="static/img/profileIcon/{{ summoner_data.profile_icon_id }}.png" alt="" class="img-icon">
                     </div>
                     <div class="ps-3">
                       <h6>{{ summoner_name }}</h6>
@@ -209,7 +209,7 @@
                   {% for match in recent_matches %}
                   <div class="card">
                     <div class="card-header">
-                      <span class="game-type">{{ match.game_mode }}</span>
+                      <span class="game-type">{{ match.game_type }}</span>
                       <img src="static/img/champion/{{ match.champion_name }}.png" alt="Champion icon" class="champ-icon">
                       <div class="game-runes">
                         <img src="static/img/spells/{{ match.summoner_spell_ids[0] }}.png" alt="spell-1" class="rune-icon">
