Cambios sustanciales a la estructura de archivos del proyecto

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1> | Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -123,7 +123,7 @@
                 
 
                 <div class="card-body">
-                  <h5 class="card-title">Profile</h5>
+                  <h5 class="card-title"> | Profile</h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -203,7 +203,7 @@
               <div class="card top-selling overflow-auto">
 
                 <div class="card-body pr-25 pl-25">
-                  <h5 class="card-title center-text">Recent Games</h5>
+                  <h5 class="card-title center-text"> | Recent Games</h5>
 
                   <!-- Cards -->
                   {% for match in recent_matches %}
@@ -273,7 +273,7 @@
           <!-- Roles chart -->
           <div class="card">
             <div class="card-body pb-2">
-              <h5 class="card-title">Roles</h5>
+              <h5 class="card-title"> | Roles</h5>
 
               <div id="trafficChart" style="min-height: 150px;" class="echart"></div>
 
@@ -343,7 +343,7 @@
           <!-- Champion Stats -->
           <div class="card">
             <div class="card-body pb-0">
-              <h5 class="card-title ">Champion Stats</h5>
+              <h5 class="card-title "> | Champion Stats</h5>
               {% if champions_played %}
                 {% for champion in champions_played %}
                   <hr>
