--- a/templates/index.html
+++ b/templates/index.html
@@ -10,24 +10,24 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="static/img/test-logo.png" rel="icon">
-  <link href="static/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/static/img/test-logo.png" rel="icon">
+  <link href="/static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="static/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="static/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="static/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="static/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/static/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="/static/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="/static/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/static/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="static/css/style.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin
@@ -45,13 +45,13 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="" class="logo d-flex align-items-center">
-        <img src="static/img/test-logo.png" alt="">
+        <img src="/static/img/test-logo.png" alt="">
         <span class="d-none d-lg-block">wh.gg</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
       
       <div class="search-bar">
-        <form class="search-form d-flex align-items-center" method="POST" action="#">
+        <form id="search-form" class="search-form d-flex align-items-center" method="GET" action="#">
           <input type="text" name="summoner_name" placeholder="Search" title="Enter summoner name">
           <button type="submit" title="Search"><i class="bi bi-search"></i></button>
         </form>
@@ -65,7 +65,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="">
+        <a class="nav-link " href="{{ url_for('summoner_info', region=region, summoner_name=summoner_name) }}">
           <i class="bi bi-house"></i>
           <span>Home</span>
         </a>
@@ -127,7 +127,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <img src="static/img/profileIcon/{{ summoner_data.profile_icon_id }}.png" alt="" class="img-icon">
+                      <img src="/static/img/profileIcon/{{ summoner_data.profile_icon_id }}.png" alt="" class="img-icon">
                     </div>
                     <div class="ps-3">
                       <h6>{{ summoner_name }}</h6>
@@ -135,13 +135,14 @@
                       <script>
                       document.addEventListener('DOMContentLoaded', function () {
                         const updateButton = document.getElementById('update-button');
-                        const searchForm = document.querySelector('.search-form');
-                        const searchInput = document.querySelector('input[name="query"]')
-                      
+
+                        const summonerInfoUrl = "{{ url_for('summoner_info', region=region, summoner_name=summoner_name) }}";
+
                         updateButton.addEventListener('click', function (event) {
                           event.preventDefault();
-                          searchInput.value = '{{ summoner_name }}'
-                          searchForm.submit();
+                          
+                          // Redirige a la URL actual con la región y el nombre del invocador
+                          window.location.href = summonerInfoUrl;
                         });
                       });
                       </script>
@@ -163,7 +164,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <img src="static/img/{{ summoner_data.soloq.rank.split()[0] }}.webp" alt="master" class="img-icon">
+                      <img src="/static/img/{{ summoner_data.soloq.rank.split()[0] }}.webp" alt="master" class="img-icon">
                     </div>
                     <div class="ps-3">
                       <h6>{{ summoner_data.soloq.rank }}</h6>
@@ -184,7 +185,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <img src="static/img/{{ summoner_data.flex.rank.split()[0] }}.webp" alt="master" class="img-icon">
+                      <img src="/static/img/{{ summoner_data.flex.rank.split()[0] }}.webp" alt="master" class="img-icon">
                     </div>
                     <div class="ps-3">
                       <h6>{{ summoner_data.flex.rank }}</h6>
@@ -210,10 +211,10 @@
                   <div class="card">
                     <div class="card-header">
                       <span class="game-type">{{ match.game_type }}</span>
-                      <img src="static/img/champion/{{ match.champion_name }}.png" alt="Champion icon" class="champ-icon">
+                      <img src="/static/img/champion/{{ match.champion_name }}.png" alt="Champion icon" class="champ-icon">
                       <div class="game-runes">
-                        <img src="static/img/spells/{{ match.summoner_spell_ids[0] }}.png" alt="spell-1" class="rune-icon">
-                        <img src="static/img/spells/{{ match.summoner_spell_ids[1] }}.png" alt="spell-2" class="rune-icon">
+                        <img src="/static/img/spells/{{ match.summoner_spell_ids[0] }}.png" alt="spell-1" class="rune-icon">
+                        <img src="/static/img/spells/{{ match.summoner_spell_ids[1] }}.png" alt="spell-2" class="rune-icon">
                       </div>
                       <div class="game-score">
                         <span class="kda">{{ match.kills }} / {{ match.deaths }} / {{ match.assists }}</span>
@@ -225,7 +226,7 @@
                         {% for item_id in match.item_ids %}
                           <div class="item-icon">
                             {% if item_id != 0 %}
-                              <img src="static/img/item/{{ item_id }}.png" alt="" class="item-icon">
+                              <img src="/static/img/item/{{ item_id }}.png" alt="" class="item-icon">
                             {% endif %}
                           </div>
                         {% endfor %}
@@ -236,7 +237,7 @@
                       <div class="participant-column">
                         {% for champ_name in match.participant_champion_names[:5] %}
                         <div class="participant-icon">
-                          <img src="static/img/champion/{{ champ_name }}.png" alt="{{ champ_name }}" class="participant-icon">
+                          <img src="/static/img/champion/{{ champ_name }}.png" alt="{{ champ_name }}" class="participant-icon">
                         </div>
                         {% endfor %}
                       </div>
@@ -248,7 +249,7 @@
                       <div class="participant-column pl-100">
                         {% for champ_name in match.participant_champion_names[5:] %}
                         <div class="participant-icon">
-                          <img src="static/img/champion/{{ champ_name }}.png" alt="{{ champ_name }}" class="participant-icon">
+                          <img src="/static/img/champion/{{ champ_name }}.png" alt="{{ champ_name }}" class="participant-icon">
                         </div>
                         {% endfor %}
                       </div>
@@ -363,7 +364,7 @@
                   <div class="card-body">
                     <div class="row">
                       <div class="col">
-                        <img class="champ-img" src="static/img/champion/{{ champion.champion_name }}.png" alt="">
+                        <img class="champ-img" src="/static/img/champion/{{ champion.champion_name }}.png" alt="">
                       </div>
                       <div class="col">
                         <span class="champ-name">{{ champion.champion_name }}</span>
@@ -409,17 +410,17 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="static/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="static/vendor/chart.js/chart.umd.js"></script>
-  <script src="static/vendor/echarts/echarts.min.js"></script>
-  <script src="static/vendor/quill/quill.min.js"></script>
-  <script src="static/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="static/vendor/tinymce/tinymce.min.js"></script>
-  <script src="static/vendor/php-email-form/validate.js"></script>
+  <script src="/static/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/vendor/chart.js/chart.umd.js"></script>
+  <script src="/static/vendor/echarts/echarts.min.js"></script>
+  <script src="/static/vendor/quill/quill.min.js"></script>
+  <script src="/static/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="/static/vendor/tinymce/tinymce.min.js"></script>
+  <script src="/static/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="static/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
 
 </body>
 
