--- a/templates/index.html
+++ b/templates/index.html
@@ -38,14 +38,14 @@
   ======================================================== -->
 </head>
 
-<body>
+<>
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="" class="logo d-flex align-items-center">
-        <img src="/static/img/test-logo.png" alt="">
+        <!-- <img src="/static/img/test-logo.png" alt=""> -->
         <span class="d-none d-lg-block">wh.gg</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -392,6 +392,7 @@
     
   </main><!-- End #main -->
   
+  {% endif %}
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
@@ -404,8 +405,8 @@
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
       Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
-  </footer><!-- End Footer -->
-  {% endif %}
+  </footer>
+  </<!-- End Footer -->
   
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
