--- a/templates/summoner_page.html
+++ b/templates/summoner_page.html
@@ -10,12 +10,15 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/static/img/test-logo.png" rel="icon">
+  <link href="/static/img/wh.ico" rel="icon">
   <link href="/static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +58,7 @@
           <input type="text" name="summoner_name" placeholder="Search" title="Enter summoner name">
           <button type="submit" title="Search"><i class="bi bi-search"></i></button>
         </form>
-      </div><!-- End Search Bar -->
+      </div>
     </div><!-- End Logo -->
   </header><!-- End Header -->
 
@@ -66,27 +69,27 @@
 
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('summoner.summoner_info', region=region, summoner_name=summoner_name) }}">
-          <i class="bi bi-house"></i>
+          
           <span>Home</span>
         </a>
       </li><!-- End Dashboard Nav -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="">
-          <i class="bi bi-list-stars"></i>
+          
           <span>Tier List</span>
         </a>
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="">
-          <i class="bi bi-emoji-sunglasses"></i>
+          
           <span>Champions</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="">
-          <i class="bi bi-person-lines-fill"></i>
+          
           <span>Leaderboards</span>
         </a>
       </li><!-- End Contact Page Nav -->
@@ -95,18 +98,9 @@
 
   </aside><!-- End Sidebar-->
 
-  {% if summoner_name %}
   <main id="main" class="main">
 
-    <div class="pagetitle">
-      <h1> | Dashboard</h1>
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
-        </ol>
-      </nav>
-    </div><!-- End Page Title -->
+
 
     <section class="section dashboard">
       <div class="row">
@@ -392,7 +386,6 @@
     
   </main><!-- End #main -->
   
-  {% endif %}
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
